"""Test the Z-Wave JS lock platform."""

from unittest.mock import patch

import pytest
from syrupy.assertion import SnapshotAssertion
from zwave_js_server.const import CommandClass
from zwave_js_server.const.command_class.lock import (
    ATTR_CODE_SLOT,
    ATTR_USERCODE,
    CURRENT_MODE_PROPERTY,
)
from zwave_js_server.event import Event
from zwave_js_server.exceptions import FailedZWaveCommand, NotFoundError
from zwave_js_server.model.node import Node, NodeStatus

from homeassistant.components.lock import (
    DOMAIN as LOCK_DOMAIN,
    SERVICE_LOCK,
    SERVICE_UNLOCK,
    LockState,
)
from homeassistant.components.zwave_js.const import (
    ATTR_LOCK_TIMEOUT,
    ATTR_OPERATION_TYPE,
    DOMAIN,
    SERVICE_CLEAR_LOCK_USERCODE,
    SERVICE_GET_LOCK_USERCODE,
    SERVICE_SET_LOCK_CONFIGURATION,
    SERVICE_SET_LOCK_USERCODE,
)
from homeassistant.components.zwave_js.helpers import ZwaveValueMatcher
from homeassistant.const import ATTR_ENTITY_ID, STATE_UNKNOWN, Platform
from homeassistant.core import HomeAssistant
from homeassistant.exceptions import HomeAssistantError
from homeassistant.helpers import entity_registry as er

from .common import (
    SCHLAGE_BE469_LOCK_ENTITY,
    replace_value_of_zwave_value,
    snapshot_zwave_entities,
)

from tests.common import MockConfigEntry


@pytest.fixture
def platforms() -> list[Platform]:
    """Fixture to specify platforms to test."""
    return [Platform.LOCK]


async def test_all_entities(
    hass: HomeAssistant,
    entity_registry: er.EntityRegistry,
    snapshot: SnapshotAssertion,
    node_batch: dict[int, str],
    integration: MockConfigEntry,
) -> None:
    """Test all lock entities created from the node state fixtures."""
    snapshot_zwave_entities(
        hass,
        entity_registry,
        snapshot,
        integration.entry_id,
        Platform.LOCK,
        node_batch,
    )


async def test_door_lock(
    hass: HomeAssistant,
    client,
    lock_schlage_be469,
    integration,
    caplog: pytest.LogCaptureFixture,
) -> None:
    """Test a lock entity with door lock command class."""
    node = lock_schlage_be469
    state = hass.states.get(SCHLAGE_BE469_LOCK_ENTITY)

    assert state
    assert state.state == LockState.UNLOCKED

    # Test locking
    await hass.services.async_call(
        LOCK_DOMAIN,
        SERVICE_LOCK,
        {ATTR_ENTITY_ID: SCHLAGE_BE469_LOCK_ENTITY},
        blocking=True,
    )

    assert len(client.async_send_command.call_args_list) == 1
    args = client.async_send_command.call_args[0][0]
    assert args["command"] == "node.set_value"
    assert args["nodeId"] == 20
    assert args["valueId"] == {
        "commandClass": 98,
        "endpoint": 0,
        "property": "targetMode",
    }
    assert args["value"] == 255

    client.async_send_command.reset_mock()

    # Test locked update from value updated event
    event = Event(
        type="value updated",
        data={
            "source": "node",
            "event": "value updated",
            "nodeId": 20,
            "args": {
                "commandClassName": "Door Lock",
                "commandClass": 98,
                "endpoint": 0,
                "property": "currentMode",
                "newValue": 255,
                "prevValue": 0,
                "propertyName": "currentMode",
            },
        },
    )
    node.receive_event(event)

    state = hass.states.get(SCHLAGE_BE469_LOCK_ENTITY)
    assert state
    assert state.state == LockState.LOCKED

    client.async_send_command.reset_mock()

    # Test unlocking
    await hass.services.async_call(
        LOCK_DOMAIN,
        SERVICE_UNLOCK,
        {ATTR_ENTITY_ID: SCHLAGE_BE469_LOCK_ENTITY},
        blocking=True,
    )

    assert len(client.async_send_command.call_args_list) == 1
    args = client.async_send_command.call_args[0][0]
    assert args["command"] == "node.set_value"
    assert args["nodeId"] == 20
    assert args["valueId"] == {
        "commandClass": 98,
        "endpoint": 0,
        "property": "targetMode",
    }
    assert args["value"] == 0

    client.async_send_command.reset_mock()

    # Test set usercode service
    await hass.services.async_call(
        DOMAIN,
        SERVICE_SET_LOCK_USERCODE,
        {
            ATTR_ENTITY_ID: SCHLAGE_BE469_LOCK_ENTITY,
            ATTR_CODE_SLOT: 1,
            ATTR_USERCODE: "1234",
        },
        blocking=True,
    )

    assert len(client.async_send_command.call_args_list) == 1
    args = client.async_send_command.call_args[0][0]
    assert args["command"] == "node.set_value"
    assert args["nodeId"] == 20
    assert args["valueId"] == {
        "commandClass": 99,
        "endpoint": 0,
        "property": "userCode",
        "propertyKey": 1,
    }
    assert args["value"] == "1234"

    client.async_send_command.reset_mock()

    # Test clear usercode
    await hass.services.async_call(
        DOMAIN,
        SERVICE_CLEAR_LOCK_USERCODE,
        {ATTR_ENTITY_ID: SCHLAGE_BE469_LOCK_ENTITY, ATTR_CODE_SLOT: 1},
        blocking=True,
    )

    assert len(client.async_send_command.call_args_list) == 1
    args = client.async_send_command.call_args[0][0]
    assert args["command"] == "node.set_value"
    assert args["nodeId"] == 20
    assert args["valueId"] == {
        "commandClass": 99,
        "endpoint": 0,
        "property": "userIdStatus",
        "propertyKey": 1,
    }
    assert args["value"] == 0

    client.async_send_command.reset_mock()

    # Test get usercode
    with patch(
        "homeassistant.components.zwave_js.lock.get_usercode",
        return_value={
            "code_slot": 1,
            "name": "test",
            "in_use": True,
            "usercode": "1234",
        },
    ) as mock_get_usercode:
        response = await hass.services.async_call(
            DOMAIN,
            SERVICE_GET_LOCK_USERCODE,
            {ATTR_ENTITY_ID: SCHLAGE_BE469_LOCK_ENTITY, ATTR_CODE_SLOT: 1},
            blocking=True,
            return_response=True,
        )
        mock_get_usercode.assert_called_once()
        args = mock_get_usercode.call_args[0]
        assert args[0].node_id == 20
        assert args[1] == 1
        assert response == {
            SCHLAGE_BE469_LOCK_ENTITY: {
                "1": {
                    "usercode": "1234",
                    "in_use": True,
                },
            }
        }

    # Test set configuration
    client.async_send_command.return_value = {
        "response": {"status": 1, "remainingDuration": "default"}
    }
    caplog.clear()
    await hass.services.async_call(
        DOMAIN,
        SERVICE_SET_LOCK_CONFIGURATION,
        {
            ATTR_ENTITY_ID: SCHLAGE_BE469_LOCK_ENTITY,
            ATTR_OPERATION_TYPE: "timed",
            ATTR_LOCK_TIMEOUT: 1,
        },
        blocking=True,
    )

    assert len(client.async_send_command.call_args_list) == 1
    args = client.async_send_command.call_args[0][0]
    assert args["command"] == "endpoint.invoke_cc_api"
    assert args["nodeId"] == 20
    assert args["endpoint"] == 0
    assert args["args"] == [
        {
            "insideHandlesCanOpenDoorConfiguration": [True, True, True, True],
            "operationType": 2,
            "outsideHandlesCanOpenDoorConfiguration": [True, True, True, True],
            "lockTimeoutConfiguration": 1,
        }
    ]
    assert args["commandClass"] == 98
    assert args["methodName"] == "setConfiguration"
    assert "Result status" in caplog.text
    assert "remaining duration" in caplog.text
    assert "setting lock configuration" in caplog.text

    client.async_send_command.reset_mock()
    client.async_send_command_no_wait.reset_mock()
    caplog.clear()

    # Put node to sleep and validate that we don't wait for a return or log anything
    event = Event(
        "sleep",
        {
            "source": "node",
            "event": "sleep",
            "nodeId": node.node_id,
        },
    )
    node.receive_event(event)

    await hass.services.async_call(
        DOMAIN,
        SERVICE_SET_LOCK_CONFIGURATION,
        {
            ATTR_ENTITY_ID: SCHLAGE_BE469_LOCK_ENTITY,
            ATTR_OPERATION_TYPE: "timed",
            ATTR_LOCK_TIMEOUT: 1,
        },
        blocking=True,
    )

    assert len(client.async_send_command.call_args_list) == 0
    assert len(client.async_send_command_no_wait.call_args_list) == 1
    args = client.async_send_command_no_wait.call_args[0][0]
    assert args["command"] == "endpoint.invoke_cc_api"
    assert args["nodeId"] == 20
    assert args["endpoint"] == 0
    assert args["args"] == [
        {
            "insideHandlesCanOpenDoorConfiguration": [True, True, True, True],
            "operationType": 2,
            "outsideHandlesCanOpenDoorConfiguration": [True, True, True, True],
            "lockTimeoutConfiguration": 1,
        }
    ]
    assert args["commandClass"] == 98
    assert args["methodName"] == "setConfiguration"
    assert "Result status" not in caplog.text
    assert "remaining duration" not in caplog.text
    assert "setting lock configuration" not in caplog.text

    # Mark node as alive
    event = Event(
        "alive",
        {
            "source": "node",
            "event": "alive",
            "nodeId": node.node_id,
        },
    )
    node.receive_event(event)

    client.async_send_command.side_effect = FailedZWaveCommand("test", 1, "test")
    # Test set usercode service error handling
    with pytest.raises(HomeAssistantError):
        await hass.services.async_call(
            DOMAIN,
            SERVICE_SET_LOCK_USERCODE,
            {
                ATTR_ENTITY_ID: SCHLAGE_BE469_LOCK_ENTITY,
                ATTR_CODE_SLOT: 1,
                ATTR_USERCODE: "1234",
            },
            blocking=True,
        )

    # Test clear usercode service error handling
    with pytest.raises(HomeAssistantError):
        await hass.services.async_call(
            DOMAIN,
            SERVICE_CLEAR_LOCK_USERCODE,
            {ATTR_ENTITY_ID: SCHLAGE_BE469_LOCK_ENTITY, ATTR_CODE_SLOT: 1},
            blocking=True,
        )

    # Test get usercode service error handling
    with (
        patch(
            "homeassistant.components.zwave_js.lock.get_usercode",
            side_effect=NotFoundError("usercode for code slot 1 not found"),
        ),
        pytest.raises(HomeAssistantError),
    ):
        await hass.services.async_call(
            DOMAIN,
            SERVICE_GET_LOCK_USERCODE,
            {ATTR_ENTITY_ID: SCHLAGE_BE469_LOCK_ENTITY, ATTR_CODE_SLOT: 1},
            blocking=True,
            return_response=True,
        )

    client.async_send_command.reset_mock()

    event = Event(
        type="dead",
        data={
            "source": "node",
            "event": "dead",
            "nodeId": 20,
        },
    )
    node.receive_event(event)

    assert node.status == NodeStatus.DEAD
    state = hass.states.get(SCHLAGE_BE469_LOCK_ENTITY)
    assert state
    # The state should still be locked, even if the node is dead
    assert state.state == LockState.LOCKED


async def test_only_one_lock(
    hass: HomeAssistant, client, lock_home_connect_620, integration
) -> None:
    """Test node with both Door Lock and Lock CC values only gets one lock entity."""
    assert len(hass.states.async_entity_ids("lock")) == 1


async def test_door_lock_no_value(
    hass: HomeAssistant, client, lock_schlage_be469_state, integration
) -> None:
    """Test a lock entity with door lock command class that has no value for mode."""
    node_state = replace_value_of_zwave_value(
        lock_schlage_be469_state,
        [
            ZwaveValueMatcher(
                property_=CURRENT_MODE_PROPERTY,
                command_class=CommandClass.DOOR_LOCK,
            )
        ],
        None,
    )
    node = Node(client, node_state)
    client.driver.controller.emit("node added", {"node": node})
    await hass.async_block_till_done()
    state = hass.states.get(SCHLAGE_BE469_LOCK_ENTITY)
    assert state
    assert state.state == STATE_UNKNOWN


async def test_get_lock_usercode(
    hass: HomeAssistant,
    client,
    lock_schlage_be469,
    integration,
) -> None:
    """Test get lock usercode returns cached values."""
    with patch(
        "homeassistant.components.zwave_js.lock.get_usercode",
        return_value={
            "code_slot": 1,
            "name": "test",
            "in_use": True,
            "usercode": "1234",
        },
    ) as mock_get_usercode:
        response = await hass.services.async_call(
            DOMAIN,
            SERVICE_GET_LOCK_USERCODE,
            {
                ATTR_ENTITY_ID: SCHLAGE_BE469_LOCK_ENTITY,
                ATTR_CODE_SLOT: 1,
            },
            blocking=True,
            return_response=True,
        )
        mock_get_usercode.assert_called_once()
        args = mock_get_usercode.call_args[0]
        assert args[0].node_id == 20
        assert args[1] == 1
        assert response == {
            SCHLAGE_BE469_LOCK_ENTITY: {
                "1": {
                    "usercode": "1234",
                    "in_use": True,
                },
            }
        }


async def test_set_lock_usercode_error(
    hass: HomeAssistant,
    client,
    lock_schlage_be469,
    integration,
) -> None:
    """Test set lock usercode service error handling."""
    client.async_send_command.side_effect = FailedZWaveCommand("test", 1, "test")
    with pytest.raises(HomeAssistantError) as exc_info:
        await hass.services.async_call(
            DOMAIN,
            SERVICE_SET_LOCK_USERCODE,
            {
                ATTR_ENTITY_ID: SCHLAGE_BE469_LOCK_ENTITY,
                ATTR_CODE_SLOT: 1,
                ATTR_USERCODE: "1234",
            },
            blocking=True,
        )

    assert str(exc_info.value) == (
        "Unable to set lock usercode on lock "
        f"{SCHLAGE_BE469_LOCK_ENTITY} code_slot 1: zwave_error: Z-Wave error 1 - test"
    )


async def test_clear_lock_usercode_error(
    hass: HomeAssistant,
    client,
    lock_schlage_be469,
    integration,
) -> None:
    """Test clear lock usercode service error handling."""
    client.async_send_command.side_effect = FailedZWaveCommand("test", 1, "test")
    with pytest.raises(HomeAssistantError) as exc_info:
        await hass.services.async_call(
            DOMAIN,
            SERVICE_CLEAR_LOCK_USERCODE,
            {ATTR_ENTITY_ID: SCHLAGE_BE469_LOCK_ENTITY, ATTR_CODE_SLOT: 1},
            blocking=True,
        )

    assert str(exc_info.value) == (
        "Unable to clear lock usercode on lock "
        f"{SCHLAGE_BE469_LOCK_ENTITY} code_slot 1: zwave_error: Z-Wave error 1 - test"
    )


async def test_get_lock_usercode_error(
    hass: HomeAssistant,
    client,
    lock_schlage_be469,
    integration,
) -> None:
    """Test get lock usercode error handling."""
    with (
        patch(
            "homeassistant.components.zwave_js.lock.get_usercode",
            side_effect=NotFoundError("usercode for code slot 1 not found"),
        ),
        pytest.raises(HomeAssistantError),
    ):
        await hass.services.async_call(
            DOMAIN,
            SERVICE_GET_LOCK_USERCODE,
            {
                ATTR_ENTITY_ID: SCHLAGE_BE469_LOCK_ENTITY,
                ATTR_CODE_SLOT: 1,
            },
            blocking=True,
            return_response=True,
        )


async def test_get_all_lock_usercodes(
    hass: HomeAssistant,
    client,
    lock_schlage_be469,
    integration,
) -> None:
    """Test get all lock usercodes when no code_slot is provided."""
    with patch(
        "homeassistant.components.zwave_js.lock.get_usercodes",
        return_value=[
            {"code_slot": 1, "name": "one", "in_use": True, "usercode": "1234"},
            {"code_slot": 2, "name": "two", "in_use": False, "usercode": None},
        ],
    ) as mock_get_usercodes:
        response = await hass.services.async_call(
            DOMAIN,
            SERVICE_GET_LOCK_USERCODE,
            {ATTR_ENTITY_ID: SCHLAGE_BE469_LOCK_ENTITY},
            blocking=True,
            return_response=True,
        )
        mock_get_usercodes.assert_called_once()
        assert response == {
            SCHLAGE_BE469_LOCK_ENTITY: {
                "1": {"usercode": "1234", "in_use": True},
                "2": {"usercode": None, "in_use": False},
            }
        }
