# serializer version: 1
# name: test_all_entities[0][lock_home_connect_620_state.json][lock.shed_door_lock-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'lock',
    'entity_category': None,
    'entity_id': 'lock.shed_door_lock',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.14-98-0-currentMode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][lock_home_connect_620_state.json][lock.shed_door_lock-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Shed Door Lock',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LockEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'lock.shed_door_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'locked',
  })
# ---
# name: test_all_entities[0][lock_id_lock_as_id150_state.json][lock.z_wave_module_for_id_lock_150_and_101-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'lock',
    'entity_category': None,
    'entity_id': 'lock.z_wave_module_for_id_lock_150_and_101',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.60-98-0-currentMode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][lock_id_lock_as_id150_state.json][lock.z_wave_module_for_id_lock_150_and_101-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Z wave module for ID Lock 150 and 101',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LockEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'lock.z_wave_module_for_id_lock_150_and_101',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'locked',
  })
# ---
# name: test_all_entities[0][lock_popp_electric_strike_lock_control_state.json][lock.node_62-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'lock',
    'entity_category': None,
    'entity_id': 'lock.node_62',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.62-98-0-currentMode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][lock_popp_electric_strike_lock_control_state.json][lock.node_62-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Node 62',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LockEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'lock.node_62',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unlocked',
  })
# ---
# name: test_all_entities[1][lock_august_asl03_state.json][lock.august_smart_lock_pro_3rd_gen-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'lock',
    'entity_category': None,
    'entity_id': 'lock.august_smart_lock_pro_3rd_gen',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.6-98-0-currentMode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[1][lock_august_asl03_state.json][lock.august_smart_lock_pro_3rd_gen-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'August Smart Lock Pro 3rd Gen',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LockEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'lock.august_smart_lock_pro_3rd_gen',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'locked',
  })
# ---
# name: test_all_entities[2][lock_schlage_be469_state.json][lock.touchscreen_deadbolt-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'lock',
    'entity_category': None,
    'entity_id': 'lock.touchscreen_deadbolt',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '3245146787.20-98-0-currentMode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[2][lock_schlage_be469_state.json][lock.touchscreen_deadbolt-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Touchscreen Deadbolt',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LockEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'lock.touchscreen_deadbolt',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unlocked',
  })
# ---
